# nao_teleop

./: README.md  allData2.m  wbDisableBalance.py
HapticTeleop/: CMakeLists.txt  HapticTeleop  HapticTeleop.cpp  HapticTeleop.h  HapticTeleop.pro  HapticTeleop.znm  NAO_jacob0.cpp  NAO_jacob0.h  cblog.txt  deneme.m  hapticlimits.h  logs  main.cpp  naolimits.h  positioncontroller.cpp  positioncontroller.h  qiproject.xml  setpoint.cpp  setpoint.h
HapticTeleop/NaoKinematics/: NaoRArm_jacob0.cpp  NaoRArm_jacob0.h  naolimits.h
HapticTeleop/build-localtc/: CMakeCache.txt  Makefile  cmake_install.cmake
HapticTeleop/nao_osg/: manip_ellipsoid.osg  myscene.cpp
MATLAB_scripts/: NaoArmsSL.m  teleopArms.m
TeleopModule/: CMakeLists.txt  TeleopModule.cpp  TeleopModule.cpp.autosave  TeleopModule.h  cameraserver.cpp  cameraserver.h  main.cpp  qiproject.xml  testTeleopModule.cpp
TeleopModule/build-crosstc/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
TeleopModule/build-crosstc/sdk/share/qi/: path.conf
TeleopModule/build-localtc/: cmake_install.cmake  dependencies.cmake
TeleopModule/build-localtc/sdk/share/qi/: path.conf
